network-template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Deploy Network and Security Groups for Project 1 - Outline of Resources
# This should be all the basic sections needed in Project #1
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: Project1 VPC    
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Project1 InternetGW
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: 
        Ref: VPC
      InternetGatewayId: 
        Ref: InternetGateway
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId: 
        Ref: VPC
      AvailabilityZone: "us-east-1a"
      Tags:
      - Key: Name
        Value: "Public Subnet 1"
  PublicSubnet2:
    Type: AWS::EC2::Subnet
      Properties:
        CidrBlock: 10.0.2.0/24
        VpcId: 
          Ref: VPC
      AvailabilityZone: "us-east-1b"
      Tags:
      - Key: Name
        Value: "Public Subnet 2"
  PrivateSubnet1:
        Type: AWS::EC2::Subnet
      Properties:
        CidrBlock: 10.0.3.0/24
        VpcId: 
          Ref: VPC
      AvailabilityZone: "us-east-1a"
      Tags:
      - Key: Name
        Value: "Private Subnet 1"
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
      Properties:
        CidrBlock: 10.0.4.0/24
        VpcId: 
          Ref: VPC
      AvailabilityZone: "us-east-1b"
      Tags:
      - Key: Name
        Value: "Private Subnet 2"
  PublicRouteTable:
    Type: AWS::EC2::Routetable
    Properties:
      VpcId:
        Ref: VPC
      Tags: 
      - Key: Name
        Value: Public Route Table
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  PublicSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAsssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet1
      RouteTableId:
        Ref: PublicRouteTable
  PublicSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAsssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet2
      RouteTableId:
        Ref: PublicRouteTable
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all http traffic on tcp port 80
      GroupName: LoadBalancerSG
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0 
  WebInstanceSecurityGroup:
      Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow traffic from ALB to Web Servers
        GroupName:  WebServerSG
        VpcId: !Ref VPC
  WebInstanceSecurityGroupIngressRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
        IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        SourceSecurityGroupId: !Ref ALBSecurityGroup
        GroupId:  !Ref WebInstanceSecurityGroup

  # Optional BastionSercurityGroup if you build a Bastion Host

Outputs:
# This is an example of the complete YAML code for outputting the VPC information and also exporting the VPC ID for use
# by another template
  VPC:
    Description: VPC
    Value:
      Ref: VPC
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-VPCId"
  PrivateSubnet1:
    Description: PrivateSubnet1
    Value:
      Fn::GetAtt:
      - PrivateSubnet1
      - AvailabilityZone
  PrivateSubnet2:
    Description: PrivateSubnet2
    Value:
      Fn::GetAtt:
      - PrivateSubnet2
      - AvailabilityZone
  PublicSubnet1:
    Description: PublicSubnet1
    Value:
      Fn::GetAtt:
      - PublicSubnet1
      - AvailabilityZone
  PublicSubnet2:
    Description: PublicSubnet1
    Value:
      Fn::GetAtt:
      - PublicSubnet2
      - AvailabilityZone
  WebInstanceSecurityGroup:
    Description: Allow traffic from ALB to Web Servers
    Value:
      Fn::GetAtt:
      - WebInstanceSecurityGroup
      - GroupId
  ALBSecurityGroup:
      Description: Allow all http traffic on tcp port 80
    Value:
      Fn::GetAtt:
      - ALBSecurityGroup
      - GroupId
